<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dp_20"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:textColor="@color/color_white"
            android:textSize="@dimen/sp_50"
            android:id="@+id/text_input"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0"
            android:layout_weight="1"
            android:background="@color/color_gray" />

        <TextView
            android:id="@+id/text_output"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0"
            android:layout_weight="1"
            android:background="@color/color_gray"
            android:gravity="end"
            android:paddingHorizontal="@dimen/dp_5"
            android:text="@string/result_0"
            android:textColor="@color/color_white"
            android:textSize="@dimen/sp_50" />
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/button_clear"
                style="@style/Button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/ac" />

            <Button
                android:id="@+id/button_sign"
                style="@style/Button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/sign_" />

            <Button
                android:id="@+id/button_percent"
                style="@style/Button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/persent" />

            <Button
                android:id="@+id/button_division"
                style="@style/ButtonTwo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/div" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/button_seven"
                style="@style/Button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/seven" />

            <Button
                android:id="@+id/button_eight"
                style="@style/Button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/eight" />

            <Button
                android:id="@+id/button_nine"
                style="@style/Button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/night" />

            <Button
                android:id="@+id/button_multiplation"
                style="@style/ButtonTwo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/multi" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/button_four"
                style="@style/Button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/four" />

            <Button
                android:id="@+id/button_five"
                style="@style/Button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/five" />

            <Button
                android:id="@+id/button_six"
                style="@style/Button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/six" />

            <Button
                android:id="@+id/button_addition"
                style="@style/ButtonTwo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/add" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/button_one"
                style="@style/Button"
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/one" />

            <Button
                android:id="@+id/button_two"
                style="@style/Button"
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="@dimen/dp_5"
                android:text="@string/two" />

            <Button
                android:id="@+id/button_three"
                style="@style/Button"
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/three" />

            <Button
                android:id="@+id/button_subtraction"
                style="@style/ButtonTwo"
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/subtract" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/button_zero"
                style="@style/Button"
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/zero" />

            <Button
                android:id="@+id/button_dot"
                style="@style/Button"
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/dot" />

            <Button
                android:id="@+id/button_result"
                style="@style/ButtonTwo"
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/output" />
        </TableRow>
    </TableLayout>
</LinearLayout>
